--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/router": "^1.5.0",
+    "add": "^2.0.6",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "node-sass": "^4.13.1",
+    "nuxt": "^2.14.12",
     "sass-loader": "^8.0.2",
-    "nuxt": "^2.14.12"
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "sass": "^1.32.7"
