--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/router": "^1.5.0",
@@ -19,6 +20,7 @@
     "node-sass": "^4.13.1",
     "nuxt": "^2.14.12",
     "sass-loader": "^8.0.2",
+    "vform": "^1.0.1",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
